--- a/css/button.css
+++ b/css/button.css
@@ -1,31 +1,34 @@
 
+/* styles unnafected by screen size */
+
+
+
+/* ------------------------------ mobile first ------------------------------ */
+
+/* below 380px wide styles */
+
+
 .homepage_buttons {
-  margin-top    : 75px;
-  padding-bottom: 143px;
-  margin-left   : 35px;
+  padding-top    : 112px;
+  margin-left: 2vw;
 }
 
 .button_container {
-  text-align   : left;
-  margin-bottom: 30px;
+  display: inline-block;
+  text-align   : center;
 }
 
 .button_container img {
-  width : 65px;
-  height: 65px;
-  vertical-align: top;
+  width : 14vw;
+  height: 14vw;
 }
 
 .button_text {
-  display    : inline-block;
-  max-width  : 152px;
-  max-width  : 53%;  
-  font-size  : 6vw;
-  margin-left: 10px
+  font-size: 1.57vw;
 }
 
-.homepage_buttons p {
-  font-size: 4vw;
+.button_text p {
+  display: none;
 }
 
 /* ------------------------------------------- */
