--- a/css/content.css
+++ b/css/content.css
@@ -1,6 +1,6 @@
 /* styles unnafected by screen size */
 
-.content {
+/*.content {
   color: rgb(88,88,90);  
   text-align: center;
 }
@@ -18,53 +18,102 @@
 
 .spacer {
   height: 38px;
+}*/
+
+td {
+  font-size: initial;
+
+
 }
 
+.content {
+  background-color: #fff;
+  color: rgb(88,88,90);  
+  text-align: left;
+}
+
+.content-top {
+  background-color: #fff;
+}
+
+
+.page-template-default h3 {
+  font-size: 2em;
+}
+.page-template-default strong {
+  font-size: 1.5em;
+}
+
+.page-template-default h4 {
+  font-size: 1.5em;
+}
+.page-template-default .content {
+    color: rgb(88,88,90);
+    text-align: left;
+}
+
+.page-template-default .content-top {
+    background-color: rgba(255,255,255,0.85);
+    width: 61%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.page-template-default .content-top {
+
+}
+
+.page-template-default .content-inner {
+  padding-bottom: 0px;
+  margin-top: 0px;
+}
+
+.page-template-default .content-inner {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 10px 0;
+}
+
+.page-template-default .content-top p {
+  font-size: initial;
+}
+
+.page-template-default .spacer {
+    height: 0px;
+}
+
+
+.content-inner .page_header{
+  border-bottom: 2px solid black;
+}
 
 /* ------------------------------ mobile first ------------------------------ */
 
 /* below 380px wide styles */
 
 .content-top {
-  padding-top: 23%;
-}
-
-.content-top p {
-  font-size: 6vw;
-  margin-bottom: 19px;
+  padding-top: 0;
 }
 
 .content-inner {
-  margin: auto;
+  padding-bottom: 0px;
+  margin-top: 0px;
+}
+.content-inner {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 10px 0;
 }
 
-.content-inner-top {
-  width     : 80%;
-  margin-top: 130px;
+.content-top p {
+  font-size: initial;
 }
 
-hr.content-divider-top {
-  margin: 36px 0 53px 0;
+.spacer {
+    height: 0px;
 }
-
-.content-xl {
-  display      : block;
-  font-size    : 11vw;
-  line-height  : 15vw;
-}
-
-.content-lg {
-  font-size    : 8vw;
-}
-
-.content-lgp {
-  font-size    : 10vw;
-}
-
-.content-inner-bottom {
-  padding-top: 122px;
-}
-
 
 /* ------------------------------------------- */
 
@@ -115,7 +164,7 @@ hr.content-divider-top {
   /* - */
 
   .content {
-    font-size  : 51px;
+
   }
 
   .content-top {
@@ -144,20 +193,4 @@ hr.content-divider-top {
     font-size: 2.5vw;
   }
 
-  .content-lg {
-    display: none;
-  }
-
-  .content-unhelpful {
-    font-size  : 3vw;
-    margin-left: -38px;
-  }
-
-
-  .content-inner-bottom {
-    padding-top: 30px;
-    background-color: rgba(255,255,255,0.7);
-    color: rgb(53,67,77);
-    border-radius: 10px;
-    max-width: 1000px;
-  }
+}
