--- a/css/menubar.css
+++ b/css/menubar.css
@@ -6,6 +6,7 @@
   width: 100%;
   position: fixed;
   background-color: #FFF;
+  /*box-shadow:0 5px 10px 0 rgba(0,0,0,0.15),0 -5px 3px -10px #fff;*/
   box-shadow      : 0px 0px 2px 2px rgba(128,128,128,0.5);
 }
 
@@ -79,6 +80,12 @@
   .menubar--mainnav li {
     width     : 25%;
     text-align: center;
+    height    : 23px;
+    max-height: 23px;
+  }
+
+  .menubar-inner {
+    padding: 28px 38px 20px 30px;
   }
 
   .menubar--mainnav li:first-child {
@@ -88,6 +95,10 @@
   .menubar--mainnav li:last-child {
     width: 14%;
   }
+
+  .menubar--mainnav a {
+    font-size: 2.7vw;
+  } 
 
 }
 
@@ -100,6 +111,21 @@
     padding-top: 15px;
   }
 
+  .menubar--logo {
+    width      : 240px;
+    padding-top: 69px;
+  }
+
+  .menubar--mainnav a {
+    font-size : 23px;
+  }
+
+/*  .menubar--mainnav li {
+    height     : 23px;
+    max-height: 23px;
+    overflow: hidden;
+  }*/
+
 }
 
 /* ------------------------------------------- */
@@ -108,7 +134,7 @@
 @media only screen and (min-width : 992px) {
 
   .menubar-inner {
-    padding: 14px 5% 5px 4%;
+    padding: 14px 49px 5px 39px;
   }
 
   .menubar--mainnav {
@@ -116,22 +142,24 @@
     margin-left   : 5%;
     border-top    : 0px;
     vertical-align: top;
-    padding-top: 10px;
+    padding-top   : 10px;
   }
 
   .menubar--mainnav a {
-    font-size : 1.68vw;
+    font-size : 19px;
   }
 
   .menubar--mainnav li {
     width      : 36%;
     text-align : center;
     border-top : 0px;
+    height     : 23px;
+
   }
 
   .menubar--logo {
-    padding-top : 5%;
-    width       : 16%;
+    padding-top : 44px;
+    width       : 142px;
   }
 
 }
@@ -140,6 +168,11 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
-
-
+  .menubar-inner {
+      padding: 27px 49px 5px 39px;
+  }
+  .menubar--logo {
+    padding-top: 59px;
+    width: 215px;
+  }
 }
