--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -6,7 +6,6 @@
   width           : 100%;
   box-shadow      : 0px 1px 4px 2px rgba(128,128,128,0.5);
   position        : fixed;
-  top             : 108px;
 }
 
 .localservices-search {
@@ -38,6 +37,11 @@ input::-moz-placeholder {
   }
 }
 
+.home .localservices-search--container{
+  top             : 106px;
+  top             : calc(66px + 11vw);
+}
+
 .home .localservices-search {
   width    : 85%;
   height   : 36px;
@@ -55,23 +59,40 @@ input::-moz-placeholder {
 }*/
 
 ::-webkit-input-placeholder {
-  font-size  : 16px;
-  line-height: 18px;
+  font-size  : 12px;
+  line-height: 14px;
 }
 
 input::-moz-placeholder {
-  font-size: 16px;
+  font-size: 12px;
 }
 
 /* ------------------------------------------- */
 
 /* Small Devices, latest Phones */ 
 @media only screen and (min-width : 380px) {
+
+  .home .localservices-search--container{
+    top             : 106px;
+    top             : calc(58px + 11vw);
+  }
+
   @-moz-document url-prefix() {
     .home .localservices-search--container{
       top             : 130px;
     }
   }
+
+  ::-webkit-input-placeholder {
+    font-size  : 14px;
+    line-height: 16px;
+  }
+
+  input::-moz-placeholder {
+    font-size: 14px;
+  }
+
+
 }
 
 /* ------------------------------------------- */
@@ -85,10 +106,23 @@ input::-moz-placeholder {
     }
   }
 
+  .home .localservices-search--container{
+      top             : 168px;
+   }
+
   .localservices-search {
     font-size: 5vw;
     width    : 85%;
     margin   : auto;
+  }
+
+  ::-webkit-input-placeholder {
+    font-size  : 16px;
+    line-height: 18px;
+  }
+
+  input::-moz-placeholder {
+    font-size: 16px;
   }
 
 }
@@ -98,6 +132,18 @@ input::-moz-placeholder {
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
 
+  .home .localservices-search--container{
+      top             : 67px;
+      height          : 62px;
+   }
+
+  .home .localservices-search {
+      width: 380px;
+      height: 28px;
+      font-size: 16px;
+      margin: 17px auto;
+  }
+
   .localservices-search {
       font-size: 3vw;
       width    : 85%;
@@ -105,23 +151,52 @@ input::-moz-placeholder {
       margin   : auto;
   }
 
-/*  .content-searchbar .spacer {
-    height: 80px;
+
+  ::-webkit-input-placeholder {
+    font-size  : 14px;
+    line-height: 20px;
   }
 
-  .content-searchbar {
-    padding: 0 110px;
-  }*/
+  input::-moz-placeholder {
+    font-size: 16px;
+  }
+
+
 }
 
 /* ------------------------------------------- */
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
+  
+  .home .localservices-search--container {
+      top: 95px;
+      height: 108px;
+  }
 
   .localservices-search {
       font-size: 3vw;
       height   : 75px;
+  }
+
+  .menubar--mainnav a {
+      font-size: 29px;
+  }
+
+  .home .localservices-search {
+      width: 650px;
+      height: 46px;
+      font-size: 16px;
+      margin: 30px auto;
+  }
+  
+  ::-webkit-input-placeholder {
+    font-size  : 18px;
+    line-height: 22px;
+  }
+
+  input::-moz-placeholder {
+    font-size: 18px;
   }
 
 }
