--- a/css/menubar.css
+++ b/css/menubar.css
@@ -4,7 +4,6 @@
 .menubar {
   z-index: 2;
   width: 100%;
-  position: fixed;
   background-color: #FFF;
   /*box-shadow:0 5px 10px 0 rgba(0,0,0,0.15),0 -5px 3px -10px #fff;*/
   box-shadow      : 0px 0px 2px 2px rgba(128,128,128,0.5);
@@ -39,7 +38,7 @@
 /* below 380px wide styles */
 
 .menubar-inner {
-  padding: 28px 5% 20px 4%;
+  padding: 20px 5% 0px 4%;
 }
 
 .menubar--mainnav {
@@ -47,19 +46,35 @@
   padding   : 0;
 }
 
-.menubar--mainnav a {
-  font-size: 3vw;
+.menubar--mainnav li {
+  width     : 23%;
+  text-align: center;
+  border-top: 1px solid #070;
+  margin-bottom: 3px; /* overrides li margin style in main content */
 }
 
-.menubar--mainnav li {
-  width     : 27%;
-  text-align: center;
-  border-top: 2px solid #070;
+.menubar--mainnav li a:before {
+  content: "\00a0";
+}
+
+.menubar--mainnav li a {
+  font-size: 3vw;
+  border-left: 1px solid grey;
+  position: relative;
+  left:-5px;
 }
 
 .menubar--mainnav li:first-child {
   text-align: left;
   width     : 10%;
+}
+
+.menubar--mainnav li:nth-child(2) a{
+  border-left: 0 !important;
+}
+
+.menubar--mainnav li:nth-child(2) a:before {
+  content: "";
 }
 
 .menubar--mainnav li:last-child {
@@ -69,7 +84,7 @@
 
 .menubar--logo {
   width      : 35%;
-  padding-top: 10%;
+  padding-top: 8%;
 }
 
 /* ------------------------------------------- */
@@ -77,28 +92,20 @@
 /* Small Devices, latest Phones */ 
 @media only screen and (min-width : 380px) {
 
-  .menubar--mainnav li {
-    width     : 25%;
-    text-align: center;
-    height    : 23px;
-    max-height: 23px;
-  }
-
   .menubar-inner {
-    padding: 28px 38px 20px 30px;
+    padding: 28px 38px 2px 30px;
   }
 
-  .menubar--mainnav li:first-child {
-    width: 12%;
+  .menubar--mainnav li {
+    text-align: left;
+    padding-top: 2px;
   }
 
-  .menubar--mainnav li:last-child {
-    width: 14%;
+  .menubar--mainnav li a {
+    font-size: 2.5vw;
+    vertical-align: middle;
+    font-weight: bold;
   }
-
-  .menubar--mainnav a {
-    font-size: 2.7vw;
-  } 
 
 }
 
@@ -150,7 +157,7 @@
   }
 
   .menubar--mainnav li {
-    width      : 36%;
+    width      : 25%;
     text-align : center;
     border-top : 0px;
     height     : 23px;
