--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -31,15 +31,14 @@ input::-moz-placeholder {
 
 /* below 380px wide styles */
 
-@-moz-document url-prefix() {
+/*@-moz-document url-prefix() {
   .home .localservices-search--container{
-    top             : 110px;
+
   }
-}
+}*/
 
 .home .localservices-search--container{
-  top             : 106px;
-  top             : calc(66px + 11vw);
+
 }
 
 .home .localservices-search {
@@ -72,7 +71,7 @@ input::-moz-placeholder {
 /* Small Devices, latest Phones */ 
 @media only screen and (min-width : 380px) {
 
-  .home .localservices-search--container{
+/*  .home .localservices-search--container{
     top             : 106px;
     top             : calc(58px + 11vw);
   }
@@ -81,7 +80,7 @@ input::-moz-placeholder {
     .home .localservices-search--container{
       top             : 130px;
     }
-  }
+  }*/
 
   ::-webkit-input-placeholder {
     font-size  : 14px;
@@ -134,13 +133,13 @@ input::-moz-placeholder {
 
   .home .localservices-search--container{
       top             : 67px;
-      height          : 62px;
+      height          : 84px;
    }
 
   .home .localservices-search {
       width: 380px;
-      height: 28px;
-      font-size: 16px;
+      height: 50px;
+      font-size: 2vw;
       margin: 17px auto;
   }
 
@@ -153,12 +152,15 @@ input::-moz-placeholder {
 
 
   ::-webkit-input-placeholder {
-    font-size  : 14px;
-    line-height: 20px;
+    font-size: 1vw;
+    position: relative;
+    top: -4px;
   }
 
   input::-moz-placeholder {
-    font-size: 16px;
+    font-size: 1vw;
+    position: relative;
+    top: -4px;
   }
 
 
@@ -191,12 +193,15 @@ input::-moz-placeholder {
   }
   
   ::-webkit-input-placeholder {
-    font-size  : 18px;
-    line-height: 22px;
+    font-size: 1vw;
+    position: relative;
+    top: 3px;
   }
 
   input::-moz-placeholder {
-    font-size: 18px;
+    font-size: 1vw;
+    position: relative;
+    top: 3px;
   }
 
 }
